recursion.cons.lessons.recursion.cons.IsMember.scala.error
isMember:7: error: value trail is not a member of List[Int]
	else return isMember(l.trail,v)
                               ^